:bug: [_player] player height added on mobile device

--- a/scss/components/_player.scss
+++ b/scss/components/_player.scss
@@ -168,6 +168,7 @@
     
     .player {
         width: 90vmin;
+        height: 90vmin;
         left: 50%;
         transform: translateX(-50%);
         bottom: calc(50vh - 45vmin);
